k8s/ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: default
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
    appgw.ingress.kubernetes.io/use-private-ip: "false"
    appgw.ingress.kubernetes.io/override-frontend-hostname: "false"
spec:
  ingressClassName:  webapprouting.kubernetes.azure.com
  rules:
  - host: argo-argocd-server.4.217.128.181.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-argocd-server
            port:
              number: 80
